[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "airbyte-api-wrapper"
version = "0.0.3"
authors = [
  { name="Thibaut de Broca", email="thibaut@grooptown.com" },
]
description = "A wrapper for Airbyte API."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/tdebroc/airbyte-api-wrapper"
"Bug Tracker" = "https://github.com/tdebroc/airbyte-api-wrapper/issues"